test/files/neg/i17266.check
i17266.scala:13: warning: synchronized not selected from this instance
    synchronized { // error
    ^
i17266.scala:26: warning: wait not selected from this instance
    wait() // error
    ^
i17266.scala:32: warning: notify not selected from this instance
  def `maybe notify`(): Unit = notify()
                               ^
i17266.scala:33: warning: notifyAll not selected from this instance
  def `maybe notifyAll`(): Unit = notifyAll()
                                  ^
i17266.scala:53: warning: Suspicious `synchronized` call involving boxed primitive `Integer`
    1.synchronized { // warn
      ^
error: No warnings can be incurred under -Werror.
5 warnings
1 error
